--- a/index.html
+++ b/index.html
@@ -32,15 +32,17 @@
             <p class="subtitle has-text-centered">
                 Please choose an application you would like to use.
             </p>
-            <a class="columns is-3">
+            <div class="columns is-3">
 
                 <!-- LEFT SIDE -->
-                <div class="column">
+                <div class="column is-half">
                     <div class="has-background-primary">
                         <div class="card has-background-primary">
                             <div class="card-image">
                                 <figure class="image is-4by2">
-                                    <img src="images/memescreenshot.png" href="meme.html" alt="Placeholder image">
+                                    <a href="meme.html">
+                                        <img src="images/memescreenshot.png" href="meme.html" alt="Placeholder image">
+                                    </a>
                                 </figure>
                             </div>
                             <div class="card-content">
@@ -58,12 +60,14 @@
 
                 <!-- RIGHT SIDE -->
 
-                <div class="column">
+                <div class="column is-half">
                     <div class="has-background-info">
                         <div class="card has-background-info">
                             <div class="card-image">
                                 <figure class="image is-4by2">
-                                    <img src="images/moviescreenshot.png" href="movie.html" alt="Placeholder image">
+                                    <a href="movie.html">
+                                        <img src="images/moviescreenshot.png" href="movie.html" alt="Placeholder image">
+                                    </a>
                                 </figure>
                             </div>
                             <div class="card-content">
@@ -80,7 +84,7 @@
                         </div>
                     </div>
                 </div>
-
+            </div>
         </div>
 
 
