--- a/index.html
+++ b/index.html
@@ -40,8 +40,10 @@
                         <div class="card has-background-primary">
                             <div class="card-image">
                                 <figure class="image is-4by2">
-                                    <img src="https://bulma.io/images/placeholders/1280x960.png" href="meme.html"
-                                        alt="Placeholder image">
+                                    <a href="meme.html">
+                                        <img src="https://bulma.io/images/placeholders/1280x960.png" href="meme.html"
+                                            alt="Placeholder image">
+                                    </a>
                                 </figure>
                             </div>
                             <div class="card-content">
