added title on both pages and reduced the choose img div height

--- a/meme.html
+++ b/meme.html
@@ -26,6 +26,9 @@
         <hr>
 
         <div class="container">
+            <h1 class="title has-text-centered">
+                Meme Generator
+            </h1>
             <div class="columns is-3">
 
                 <!-- LEFT SIDE -->
@@ -46,13 +49,14 @@
 
                 <!-- RIGHT SIDE -->
 
-                <div class="column">
+                <div class="column is-half">
                     <article class="message is-large is-primary">
                         <div class="message-header">
                             <p>Choose an image</p>
                         </div>
                         <div class="message-body">
-                            <div id="imgSection" class="columns" style="overflow-x: auto;">
+                            <div id="imgSection" class="columns" style="overflow-x: auto; height: 200px; 
+                            overflow-y: hidden; ">
 
                                 <!-- IMAGE CODE GOES HERE -->
 
