--- a/movie.html
+++ b/movie.html
@@ -26,7 +26,9 @@
         <hr>
 
         <div class="container">
-
+            <h1 class="title has-text-centered">
+                Movie Explorer
+            </h1>
             <!-- SEARCH AREA -->
             <div class="field">
                 <div class="control">
