changed placeholder img on meme

--- a/meme.html
+++ b/meme.html
@@ -38,7 +38,8 @@
                         <div class="card has-background-primary">
                             <div class="card-image">
                                 <figure class="image">
-                                    <img id="img-view" src="https://bulma.io/images/placeholders/1280x960.png"
+                                    <img id="img-view"
+                                        src="https://via.placeholder.com/1280x960?text=Please+choose+an+image"
                                         alt="Placeholder image">
                                 </figure>
                             </div>
